fix bug on mobile

--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -1,6 +1,3 @@
-.about
-  width: 100%
-
 +font-face(tai le, '../../assets/font/taile')
 
 .foto
