--- a/assets/css/3-sections/_certificates.sass
+++ b/assets/css/3-sections/_certificates.sass
@@ -1,6 +1,5 @@
 .section4
   position: relative
-  width: 100%
 
 .layar
   width: 100%
