--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -1,5 +1,4 @@
 footer
-  width: 100%
   @extend %bg
   font-size: 0
   //+display(flex)
