--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,7 +1,6 @@
 
 header
   height: 370px
-  width: 100%
   @extend %bg
 
   .fix
@@ -95,10 +94,3 @@ header
 
       .menu-hp
         max-height: 100px
-
-//
-//@media  screen and (min-width: 570px)
-//  header
-//    .fix
-//      nav
-//        display: block
