--- a/assets/css/3-sections/_projects.sass
+++ b/assets/css/3-sections/_projects.sass
@@ -1,5 +1,4 @@
 .sectionabu
-  width: 100%
   background-color: lightgray
   text-align: center
 
